# PaumIoT

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  debug_mqtt_packet.py  event_driven.cpp  four_protocol.cpp  main.c  main2.cpp  middleware  out  paumiot  test.cpp  udp_tcp.cpp
client-plugin/include/: paumiot_client.h
common/include/: errors.h  logging.h  memory_pool.h  queue.h  types.h
common/src/: errors.c  logging.c  memory_pool.c  queue.c
config/: Doxyfile  paumiot.conf
docs/: DEVELOPMENT.md  MQTT_CoAP_Adapters.txt  system_architecture.txt
examples/: mqtt_to_coap_bridge.c
files/: main.cpp  tester.cpp
include/: paumiot.h
include/bll/: bll.h
include/common/: config.h  errors.h  logging.h  types.h
include/core/: server_core.h  types.h
include/dal/: dal.h
include/network/: network_manager.h
include/pal/: pal.h
include/pdl/: pdl.h
include/protocol/: protocol_detector.h  protocol_handlers.h
include/session/: session_manager.h
include/smp/: smp.h
middleware/include/: paumiot_core.h
middleware/include/engine/: engine.h
middleware/include/initiator/: initiator.h
middleware/include/sensor_manager/: sensor_manager.h
middleware/include/state/: state_management.h
scripts/: benchmark.sh  setup.sh
src/common/: errors.c
src/core/: server_core.c
src/network/: network_manager.c
src/pal/: pal.c
src/pal/adapters/coap/: coap_adapter.c
src/pal/adapters/mqtt/: mqtt_adapter.c
src/protocol/: protocol_detector.c  protocol_handlers.c
src/session/: session_manager.c
src/tests/: test_framework.c
tests/: comprehensive_packet_test.sh  comprehensive_test.sh  dynamic_confidence_test.sh  enhanced_protocol_test.sh  mixed_protocol_test.sh  mqtt_packet_test.sh  mqtt_test.c  packet_demo.sh  test_framework.h  test_packets.sh  test_protocols.sh
tests/integration/: test_integration.c  test_protocol_integration.c
tests/unit/: test_errors.c  test_logging.c  test_memory_pool.c  test_pal_adapters.c  test_queue.c  test_types.c
